# FuzzySynony

./: .gitignore  CMakeList2s.txt  CMakeLists.txt  LICENSE  README.md  a.rb
src/: cg_test.h  fuzzysynony.cpp  fuzzysynony.hpp  fuzzysynony_test.cpp  fuzzysynony_test.hpp  gtest_main.cpp  main.cpp  run_all_tests.cpp
